# 101-alphas

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE_INSTRUCTIONS.md  alphas.py  app.py  check_setup.py  data.py  pyproject.toml  requirements.txt  sp500.db  verify_v2.py
.github/workflows/: tests.yml
alphas/: __init__.py  engine.py  formulas.py  metadata.py  operators.py
dashboard/: app.py  utils.py
dashboard/components/: __init__.py
data/: sample_data.csv
docs/: alpha_descriptions.md  api_reference.md  examples.md  quickstart.md
src/: data_loader.py  definitions.py  engine.py  market_data.py  operators.py
tests/: test_alphas.py
