[project]
name = "101-alphas"
version = "0.2.0"
description = "Educational platform for 101 Alphas quantitative research"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "streamlit>=1.32.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "plotly>=5.19.0",
]

[tool.uv]
# UV specific configuration can go here
